tests/src/frontend/typechecking/invalid/invalid_tparam_match_3.sk
class C<T>(value: T)

fun getMaxTimeFromFilter<V: nonNullable>(x: C<V>): Nullable<Int> {
  x match {
  | C(Int _) -> Null()
  }
}
